welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value tab
  for (i<-0 to tab.length-1) {
               ^indexOfValue:3: error: not found: value tab
    if (tab[i]==lookingFor) {
        ^indexOfValue:3: error: not found: type i
    if (tab[i]==lookingFor) {
            ^